--- a/mars-Rover-kata/package.json
+++ b/mars-Rover-kata/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.2.5",
+    "@types/jquery": "^3.5.16",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
